# lcm_test

./: CMakeLists.txt  README.md  SwarmPose_t.lcm  lcm_generate_msg.sh
include/: Pose_t.hpp  TrajectoryDescriptor_t.hpp  lcm_net.h
src/: lcm_net.cpp  main.cpp
